# haskell-static-data-sqlite

./: .gitignore  LICENSE  README.md  haskell-static-data-sqlite.cabal  shell.nix  stack.yaml
app/: Main.hs
cbits/: appendvfs.c
