name:                haskell-static-data-sqlite
version:             0.1.0.0
synopsis:            Example how to append data to an executable using sqlite
description:         Example how to append data to an executable using sqlite
homepage:            https://github.com/nh2/haskell-static-data-sqlite#readme
license:             MIT
license-file:        LICENSE
author:              Niklas Hambüchen <mail@nh2.me>
maintainer:          Niklas Hambüchen <mail@nh2.me>
copyright:           2020 Niklas Hambüchen
category:            System
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

executable exe
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      base
  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/nh2/haskell-static-data-sqlite
