name:                haskell-static-data-sqlite
version:             0.1.0.0
synopsis:            Example how to append data to an executable using sqlite
description:         Example how to append data to an executable using sqlite
homepage:            https://github.com/nh2/haskell-static-data-sqlite#readme
license:             MIT
license-file:        LICENSE
author:              Niklas Hambüchen <mail@nh2.me>
maintainer:          Niklas Hambüchen <mail@nh2.me>
copyright:           2020 Niklas Hambüchen
category:            System
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

executable exe
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: Main.hs
  c-sources:
    -- Copied from https://sqlite.org/src/file/ext/misc/appendvfs.c
    cbits/appendvfs.c
  cc-options:
    -- We need to set either `-DSQLITE_OMIT_LOAD_EXTENSION` or `-DSQLITE_CORE`
    -- (see `sqlite3ext.h`; it is not clear yet which one is more correct
    -- or whether it is intended by sqlite authors that these are needed)
    -- when compiling `appendvfs.c` separate from the `sqlite.c` amalgamation
    -- to ensure `sqlite3_vfs_find()` does not segfault at first call.
    -DSQLITE_OMIT_LOAD_EXTENSION
    -- For better debugging with gdb
    -g
  build-depends:
      base
    , direct-sqlite >= 2.3.24
    , sqlite-simple >= 0.4.16.0
    , text
  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/nh2/haskell-static-data-sqlite
